# lama-sm-interpreter

./: CMakeLists.txt  README.md
bytefile/: bytefile.c  bytefile.cpp  bytefile.h
examples/: Sort.bc  Sort.lama  test010.lama  test041.bc  test041.lama  test073.bc  test073.lama  testZero.bc  testZero.lama
runtime/: Makefile  custom_data.c  gc.c  runtime.c  runtime.h
src/: main.cpp  printers.hpp
src/analyzer/: Analyzer.hpp
src/decoders/: Designations.hpp  InstructionDecoder.hpp  InstructionDecodersByArgsNumber.hpp  InstructionType.hpp
src/single_interpreters/: binop_interpreter.hpp  boxing.hpp  boxing_interpreters.hpp  builtin_interpreters.hpp  call_stack_interpreters.hpp  cf_interpreters.hpp  closures.hpp  helper_interpreters.hpp  jump_interpreters.hpp  mem_interpreters.hpp  patt.hpp  stack_ops_interpreters.hpp  unboxing_interpreters.hpp
src/state/: FrameStack.hpp  StackMachineState.hpp
src/verifier/: Verifier.hpp
tools/: run_regression.sh
